fix alignwide -> img inside 100%

--- a/css/has_sidebar.scss
+++ b/css/has_sidebar.scss
@@ -90,9 +90,6 @@ article{
       margin-right: -50px;
       margin-left: 0;
     }
-    @media (min-width: 768px){
-      padding: 15px 0 15px 15px;
-    }
   }
 }
 
@@ -100,9 +97,6 @@ article{
   @media (min-width: 1360px) {
     margin-right: 0;
     margin-left: -50px;
-  }
-  @media (min-width: 768px){
-    padding: 15px 15px 15px 0!important;
   }
 }
 
@@ -116,17 +110,15 @@ article{
 
 // wider than the content
 .alignwide{
-  img{
-    @media (min-width: 992px) and (max-width: 1199px){
-      width: calc(100% + 100px)!important;
-      left: -50px;
-      position: relative;
-    }
-    @media (min-width: 1360px) {
-      width: calc(100% + 100px)!important;
-      left: -50px;
-      position: relative;
-    }
+  @media (min-width: 992px) and (max-width: 1199px){
+    margin-left: -50px;
+    margin-right: -50px;
+    position: relative;
+  }
+  @media (min-width: 1360px){
+    margin-left: -50px;
+    margin-right: -50px;
+    position: relative;
   }
 }
 
